base/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: deployment
    deploymentconfig: deployment
