base/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: service
    weight: 100
  wildcardPolicy: None
